+-----------+
| CHANGELOG |
+-----------+

# GIMP Book 2013.6 rev 63
- Added support for gettext translation.
- Added French translation by Patrick Depoix

# GIMP Book 2012.8 rev 50
- Added About dialog.
- Added Help menu with link to online help.
- Removed unused help button in a New Book window.
- Semi-fixed the icon for GIMP Book, though it's still blurry at high resoltions.
- Added a View menu for Storyboard mode and hiding the toolbar.
- Made a simple packaging script, which combines book.py, docs and license in one zip file.

# GIMP Book 2012.8 rev 47
- Added keyboard shortcuts to page actions.
- Added a page menu to the main menu bar, that contains the same as the right click menu.
- Added page import.
- Added error messages on attempting to rename, delete or duplicate pages with nothing selected.

# GIMP Book 2012.7 rev 46
- Added page duplication.
- Added open page to right click menu.

# GIMP Book 2012.3 rev 40 beta
- Added storyboard mode, where the pages flow, rather than display in two columns.
- Added page numbers to title bar.
- Added right click menu to pages, for quicker access to adding, deleting and renaming pages.
- Added gimp icon to dialog and windows..
- Bugfix - Clicking 'No' button in the delete page dialog now works.
- Bugfix - Window can be made smaller.